# Abrindo-arquivos-em-bloco

./: Sent_copy  Untitled Diagram.drawio  get_paragraph.py  ler_email.py  main.py  pyproject.toml  read_txt.py  sample1.txt  sample3.txt  teste.txt  watcher.py
